--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,9 @@ lerna-debug.log*
 # Environment variable
 .env*
 
+# IDE - webstorm
+/.idea/*
+
 # terraform files
-terraform-service-account-credentials.json
-/.terraform.lock.hcl
-/terraform.tfstate
-/terraform.tfstate.backup
+/.terraform/*
+
