--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,11 @@
 steps:
   # Build the docker image
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '-t', 'europe-west1-docker.pkg.dev/gcp-practise-364610/prac/ci-cd:$COMMIT_SHA', '.' ]
+    args: [ 'build', '-t', 'europe-west1-docker.pkg.dev/$PROJECT_ID/prac/ci-cd:$COMMIT_SHA', '.' ]
 
   # Push the image to artifact registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'europe-west1-docker.pkg.dev/gcp-practise-364610/prac/ci-cd:$COMMIT_SHA']
+    args: ['push', 'europe-west1-docker.pkg.dev/$PROJECT_ID/prac/ci-cd:$COMMIT_SHA']
 
   # Deploy container image to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -15,8 +15,8 @@ steps:
       - 'deploy'
       - 'prac'
       - '--image'
-      - 'europe-west1-docker.pkg.dev/gcp-practise-364610/prac/ci-cd:$COMMIT_SHA'
+      - 'europe-west1-docker.pkg.dev/$PROJECT_ID/prac/ci-cd:$COMMIT_SHA'
       - '--region'
-      - 'europe-west1'
+      - '-europe-west1'
   images:
-    - 'europe-west1-docker.pkg.dev/gcp-practise-364610/prac/ci-cd:$COMMIT_SHA'
+    - 'europe-west1-docker.pkg.dev/$PROJECT_ID/prac/ci-cd:$COMMIT_SHA'
