--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,3 +18,7 @@ steps:
       - 'europe-west1-docker.pkg.dev/$PROJECT_ID/prac/ci-cd:$COMMIT_SHA'
       - '--region'
       - 'europe-west1'
+      - '--port'
+      - '5000'
+      - '--set-env-vars'
+      - ['ESPADA=Barragan Louisenbairn','RANK=2','MONGODB_URI=mongodb://localhost:27017/nest']
