--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,5 +20,7 @@ steps:
       - 'europe-west1'
       - '--port'
       - '5000'
-      - '--set-env-vars'
-      - ['ESPADA=Barragan Louisenbairn','RANK=2','MONGODB_URI=mongodb+srv://interclub-api:iqZi02BQY7uUeoIl@cluster0.nygob.mongodb.net/interclub']
+    env:
+      - 'ESPADA=Barragan Louisenbairn'
+      - 'RANK=2'
+      - 'MONGODB_URI=mongodb+srv://interclub-api:iqZi02BQY7uUeoIl@cluster0.nygob.mongodb.net/interclub'
