--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,18 +20,7 @@ steps:
       - 'europe-west1'
       - '--port'
       - '5000'
-      - '--set-env-vars'
-      - 'ESPADA=Barragan Louisenbairn'
-      - '--set-env-vars'
-      - 'RANK=2'
-      - '--set-env-vars'
-      - 'PORT=5000'
-      - '--set-env-vars'
-      - 'MONGODB_URI=mongodb+srv://interclub-api:iqZi02BQY7uUeoIl@cluster0.nygob.mongodb.net/interclub'
-
-options:
-    env:
-      - 'ESPADA=Barragan Louisenbairn'
-      - 'RANK=2'
-      - 'PORT=5000'
-      - 'MONGODB_URI=mongodb+srv://interclub-api:iqZi02BQY7uUeoIl@cluster0.nygob.mongodb.net/interclub'
+      - '--set-env-vars=ESPADA=Barragan Louisenbairn'
+      - '--set-env-vars=RANK=2'
+      - '--set-env-vars=PORT=5000'
+      - '--set-env-vars=MONGODB_URI=mongodb+srv://interclub-api:iqZi02BQY7uUeoIl@cluster0.nygob.mongodb.net/interclub'
