--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,3 +23,4 @@ steps:
       - '--set-env-vars=ESPADA=Barragan Louisenbairn'
       - '--set-env-vars=RANK=2'
       - '--set-env-vars=MONGODB_URI=mongodb+srv://interclub-api:iqZi02BQY7uUeoIl@cluster0.nygob.mongodb.net/interclub'
+      - '--allow-unauthenticated'
